# darling-tcsh

./: .gitignore  CMakeLists.txt  README.md
locale/C/LC_MESSAGES/: tcsh.cat
locale/de/LC_MESSAGES/: tcsh.cat
locale/es/LC_MESSAGES/: tcsh.cat
locale/et/LC_MESSAGES/: tcsh.cat
locale/fi/LC_MESSAGES/: tcsh.cat
locale/fr/LC_MESSAGES/: tcsh.cat
locale/gr/LC_MESSAGES/: tcsh.cat
locale/it/LC_MESSAGES/: tcsh.cat
locale/ja/LC_MESSAGES/: tcsh.cat
locale/pl/LC_MESSAGES/: tcsh.cat
locale/ru/LC_MESSAGES/: tcsh.cat
locale/ru_UA.koi8u/LC_MESSAGES/: tcsh.cat
tcsh/: tc.sig.c
